--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
       with:
-       gradle-version: "latest"
+       gradle-version: "8.10"
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
     - uses: nttld/setup-ndk@v1
