chmod gradle file

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,6 +33,7 @@ jobs:
         add-to-path: true
     - name: Build for Android with gradle
       run: |
+        chmod +x ./gradlew
         ./gradlew build
       shell: bash
       env: 
