--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,7 +26,7 @@ jobs:
        gradle-version: "8.10"
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
-    - uses: Setup Android NDK 
+    - uses: nttld/setup-ndk@v1
       id: setup-ndk
       with:
         ndk-version: r21e
